# Apatheia

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bindings/: apatheia.cpp
include/math/: dual_number.h  inertia.h  mat3x3.h  math.h  quaternion.h  vec3.h
tests/: test_math.cpp  test_placeholder.cpp  test_quaternion.cpp
